# har-annotator

./: .gitignore  CITATION.cff  LICENSE  README.md  candidate_hars.parquet  environment.yml  funnel_counts.csv  har_evidence.parquet  har_evidence_schema.json  har_shortlist_ranked.csv  har_shortlist_ranked.parquet  har_shortlist_top50.csv  phase0_sources.md  pyproject.toml  rank_comparison.csv  requirements.txt  run_pipeline.py  top_candidates_interpretation.md
.github/workflows/: ci.yml
data/: har_ortholog_seqs.parquet  jaspar2024_fpr1e-4_thresholds.json  manifest.csv
har-annotator/: __init__.py  data_io.py  evidence.py  filters.py  references.py  score.py  temporal.py
har_annotator/: __init__.py  acceleration.py  data_io.py  download.py  evidence.py  motif.py  score.py
tests/: test_smoke.py
v2/: README_v2.md  V2_MANIFEST.txt  demo_live_v2.py  discovery_new_elements.csv  har_shortlist_discovery.csv  har_shortlist_discovery.parquet  har_shortlist_neglect.csv  har_shortlist_neglect.parquet  har_shortlist_relaxed.csv  har_shortlist_relaxed.parquet  validation_ladder.md
v2/data/: har_ortholog_seqs_relaxed.parquet
weight_eval/: README.md  evaluate_weights.py  har_shortlist_ranked.parquet  requirements.txt
